syntax = "proto3";

package user;
option java_multiple_files = true;

service UserService {
  rpc CheckUserExists (UserExistsRequest) returns (UserExistsResponse);
}

message UserExistsRequest {
  string userId = 1;
}

message UserExistsResponse {
  bool exists = 1;
}